@@ -1,5 +1,7 @@
 package jio;
 
+import static java.util.Objects.requireNonNull;
+
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
@@ -7,35 +9,32 @@ import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 
-import static java.util.Objects.requireNonNull;
-
 final class AllExpSeq extends AllExp {
 
   public AllExpSeq(List<IO<Boolean>> exps,
                    Function<EvalExpEvent, BiConsumer<Boolean, Throwable>> debugger
-                  ) {
+  ) {
     super(debugger,
           exps
-         );
+    );
   }
 
   @Override
   public AllExp retryEach(
-      final Predicate<? super Throwable> predicate,
-      final RetryPolicy policy
-                         ) {
+                          final Predicate<? super Throwable> predicate,
+                          final RetryPolicy policy
+  ) {
     requireNonNull(predicate);
     requireNonNull(policy);
 
     return new AllExpSeq(exps.stream()
                              .map(it -> it.retry(predicate,
                                                  policy
-                                                ))
+                             ))
                              .toList(),
                          jfrPublisher
     );
   }
-
 
   @Override
   CompletableFuture<Boolean> reduceExp() {
@@ -45,15 +44,15 @@ final class AllExpSeq extends AllExp {
   private CompletableFuture<Boolean> get(List<IO<Boolean>> exps) {
 
     return exps.size() == 1
-           ? exps.getFirst()
-                 .get()
-           : exps.getFirst()
-                 .get()
-                 .thenCompose(bool -> bool
-                                      ? get(exps.subList(1,
-                                                         exps.size()
-                                                        ))
-                                      : CompletableFuture.completedFuture(false));
+        ? exps.get(0)
+              .get()
+        : exps.get(0)
+              .get()
+              .thenCompose(bool -> bool
+                  ? get(exps.subList(1,
+                                     exps.size()
+                  ))
+                  : CompletableFuture.completedFuture(false));
   }
 
   @Override
@@ -61,18 +60,17 @@ final class AllExpSeq extends AllExp {
     Objects.requireNonNull(builder);
     return new AllExpSeq(DebuggerHelper.debugConditions(exps,
                                                         builder
-                                                       ),
+    ),
                          getJFRPublisher(builder)
     );
   }
-
 
   @Override
   public AllExp debugEach(final String context) {
     return debugEach(EventBuilder.of(this.getClass()
                                          .getSimpleName(),
                                      context
-                                    ));
+    ));
 
   }
 }
