@@ -1,6 +1,5 @@
 package jio.api;
 
-
 import jio.RetryPolicies;
 import jio.RetryStatus;
 import org.junit.jupiter.api.Assertions;
@@ -19,13 +18,13 @@ public class TestPolicies {
                                                 .simulate(20);
     Assertions.assertEquals(5,
                             simulation.size()
-                           );
+    );
     Assertions.assertEquals(new RetryStatus(4,
                                             Duration.ofMillis(100),
                                             Duration.ofMillis(40)
-                            ),
-                            simulation.getLast()
-                           );
+    ),
+                            simulation.get(simulation.size() - 1)
+    );
 
   }
 
@@ -39,7 +38,7 @@ public class TestPolicies {
                                                 .simulate(20);
     Assertions.assertEquals(20,
                             simulation.size()
-                           );
+    );
     Assertions.assertTrue(simulation.stream()
                                     .allMatch(rs -> rs.previousDelay()
                                                       .compareTo(cap) <= 0));
@@ -55,13 +54,12 @@ public class TestPolicies {
                                                 .simulate(20);
     Assertions.assertEquals(6,
                             simulation.size()
-                           );
+    );
     Assertions.assertTrue(simulation.stream()
                                     .allMatch(rs -> rs.cumulativeDelay()
                                                       .compareTo(acc) <= 0));
 
   }
-
 
   @Test
   public void test_simulation_4() {
@@ -73,13 +71,12 @@ public class TestPolicies {
                                                 .simulate(20);
     Assertions.assertEquals(9,
                             simulation.size()
-                           );
+    );
     Assertions.assertTrue(simulation.stream()
                                     .allMatch(rs -> rs.previousDelay()
                                                       .compareTo(cap) <= 0));
 
   }
-
 
   @Test
   public void test_simulation_5() {
@@ -88,31 +85,30 @@ public class TestPolicies {
                                                 .append(RetryPolicies.limitRetries(2))
                                                 .followedBy(RetryPolicies.constantDelay(tenMillis)
                                                                          .limitRetriesByCumulativeDelay(Duration.ofMillis(200)
-                                                                                                       )
-                                                           )
-                                                    .
-                                                simulate(20);
+                                                                         )
+                                                )
+                                                .simulate(20);
     Assertions.assertEquals(20,
                             simulation.size()
-                           );
+    );
     Assertions.assertEquals(10,
                             simulation.get(1)
                                       .previousDelay()
                                       .toMillis()
-                           );
+    );
     Assertions.assertEquals(20,
                             simulation.get(2)
                                       .previousDelay()
                                       .toMillis()
-                           );
+    );
     Assertions.assertEquals(200,
-                            simulation.getLast()
+                            simulation.get(simulation.size() - 1)
                                       .cumulativeDelay()
                                       .toMillis()
-                           );
+    );
     Assertions.assertTrue(simulation.subList(3,
                                              simulation.size()
-                                            )
+    )
                                     .stream()
                                     .allMatch(rs -> rs.previousDelay()
                                                       .compareTo(tenMillis) == 0));
